<resources>
    <string name="app_name">iWiFi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="login">登录</string>
    <string name="tel">手机号</string>
    <string name="password">密码</string>
    <string name="forgot_your_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="next">接下来</string>
    <string name="empty_pwd">输入密码</string>
    <string name="empty_user">输入用户名</string>
    <string name="no_internet">无网络</string>
    <string name="register_succ">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="login_succ">登录成功</string>
    <string name="error">出错</string>
    <string name="registered">该邮箱已被注册</string>
    <string name="error_info">邮箱或密码错误</string>
    <string name="unlogin">登录iWiFi</string>
    <string name="wrong_email">输入正确邮箱</string>
    <string name="email">邮箱</string>
    <string name="nick">昵称</string>
    <string name="pwd_length">密码不得少于6位</string>
    <string name="request_permission_">权限申请</string>
    <string name="is_first">is_first</string>
    <string name="login_fail">登录失败</string>
    <string name="logining">登录中…</string>
    <string name="reset_pwd">密码重置</string>
    <string name="binded_email">账号绑定邮箱</string>
    <string name="empty_email">输入邮箱</string>
    <string name="registering">注册中...</string>
    <string name="title_wifi">WiFi</string>
    <string name="title_map">热点地图</string>
    <string name="title_my">我的</string>
    <string name="unlogin_">未登录</string>
    <string name="point_center">个人钱包</string>
    <string name="point_center_info">充值/提现</string>
    <string name="message">消息通知</string>
    <string name="message_info">无消息</string>
    <string name="my_share">我的共享</string>
    <string name="my_share_">共享热点管理</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_info">遇到问题和建议</string>
    <string name="score">给我们好评</string>
    <string name="check_update">检查更新</string>
    <string name="check_update_info">当前为最新版</string>
    <string name="share_firend">推荐给朋友</string>
    <string name="person_wallet">个人钱包</string>
    <string name="person_wallet_info">充值/消费记录</string>
    <string name="normal">常规</string>
    <string name="default_wifi_tool">默认WiFi工具</string>
    <string name="notification_bar_sw">通知栏快捷开关</string>
    <string name="notification_bar_sw_info">快捷进行WiFi设置</string>
    <string name="auto_turn_on_mobile">自动打开移动网络</string>
    <string name="auto_turn_on_mobile_info">分享热点时打开移动网络</string>
    <string name="wifi_blacklist">WiFi黑名单</string>
    <string name="remind">提醒</string>
    <string name="update_remind">新版本提醒</string>
    <string name="message_remind">新消息提醒</string>
    <string name="message_remind_info">关闭后，您将不会再接收到消息提醒</string>
    <string name="message_remind_night">夜间防打扰模式</string>
    <string name="message_remind_night_info">开启后，将自动屏蔽22:00-8:00的消息提醒</string>
    <string name="message_remind_hotspot">附近分享热点提醒</string>
    <string name="message_remind_hotspot_info">开启后，将会在合适的时间点提醒你附近分享的热点</string>
    <string name="help">使用帮助</string>
    <string name="about">关于</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="logout_sure">是否确认退出登录？</string>
    <string name="logouted">已退出登录</string>
    <string name="service_center">服务中心</string>
    <string name="company">iWiFi已陪伴您</string>
    <string name="head">头像</string>
    <string name="account">账号</string>
    <string name="sex">性别</string>
    <string name="edit_personal_info">编辑个人资料</string>
    <string name="not_edit">未设置</string>
    <string name="sms_code">验证码</string>
    <string name="request_sms_code">获取验证码</string>
    <string name="wrong_tel">输入正确手机号</string>
    <string name="wrong_sms_code">输入正确验证码</string>
    <string name="send_sms_fail">发送信息失败</string>
    <string name="error_sms_code">验证码有误</string>
    <string name="tel_registered">该号码已被注册，请直接登录</string>
    <string name="credit_points">信用分</string>
    <string name="birthday">生日</string>
    <string name="my_credit">我的信用</string>
    <string name="my_credit_">信用记录</string>
    <string name="near_wifi">附近WiFi</string>
    <string name="sharing_wifi">只看共享WiFi</string>
    <string name="no_wifi">附近无WiFi，点击打开热点地图</string>
    <string name="wifi_open">WiFi已打开</string>
    <string name="wifi_close">WiFi已关闭</string>
    <string name="wifi_close_">WiFi暂未开启</string>
    <string name="open_soon">立即开启</string>
    <string name="wifi_opening">WiFi开启中...</string>
    <string name="edit_password">输入WiFi密码</string>
    <string name="connect">连接</string>
    <string name="connect_error">连接出错</string>
    <string name="do_security_check">请进行安全检查</string>
    <string name="safety">安全</string>
    <string name="sign">信号</string>
    <string name="speed">速度</string>
    <string name="connect_count">已连接设备：</string>
    <string name="check_security">安全检查</string>
    <string name="enhance_sign">信号增强</string>
    <string name="hotspot_name">热点名称</string>
    <string name="set_pwd">设置密码？</string>
    <string name="hotspot_pwd">热点密码</string>
    <string name="post_hotspot">共享热点</string>
    <string name="personal_hotspot">个人热点</string>
    <string name="create">创建</string>
    <string name="hotspot_closed">个人热点暂未开启</string>
    <string name="hotspot_opening">开启中...</string>
    <string name="connect_device">连接设备</string>
    <string name="traffic_statistics">流量统计</string>
    <string name="earn">分享收益</string>
    <string name="no_device">暂无设备连接</string>
    <string name="device_info">设备信息</string>
    <string name="not_open_net">未开启移动数据，无法分享</string>
    <string name="share_succ">分享成功</string>
    <string name="no_result">没有搜索到相关数据</string>
    <string name="error_network">搜索失败,请检查网络连接</string>
    <string name="error_key">key验证无效</string>
    <string name="error_other">未知错误</string>
    <string name="searching">路线规划中...</string>
    <string name="unlogin_can_not_share">未登录，无法分享热点</string>
    <string name="unlogin_can_not_use">未登录，无法使用共享WiFi</string>
    <string name="shared_wifi_info">该WiFi是其他用户分享的，是否连接，享受低价流量资费？</string>
    <string name="hotspot_type">热点类型：</string>
    <string name="price">资费标准：</string>
    <string name="fixed_hotspot">固定宽带热点</string>
    <string name="hotspot">手机便携热点</string>
    <string name="network_disable">请连接网络获取数据</string>
    <string name="load_error">加载出错</string>
    <string name="security_ok">已通过安全检测</string>
    <string name="just_use">请放心使用</string>
    <string name="suggest_to">建议您继续完成以下操作</string>
    <string name="security">安全</string>
    <string name="sign_99">99%</string>
    <string name="sign_enhanced">信号已增强</string>
    <string name="no_new">当前为最新版</string>
    <string name="no_market">未安装应用市场</string>
    <string name="share_with_firend">我在使用iWiFi，这是一个WiFi共享平台，你可以将自己闲置热点、剩余流量共享出来赚取收益，也可以低价享受共享热点。iWiFi，让WiFi陪伴你身边~（官网：http://iwifi.zeblog.cn/）</string>
    <string name="checking">检查中...</string>
    <string name="my_message">我的消息</string>
    <string name="notification">通知</string>
    <string name="my_balance">我的余额</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="normal_question">常见问题</string>
    <string name="my_wallet">我的钱包</string>
    <string name="credit_record">信用记录</string>
    <string name="rule_info">规则解读</string>
    <string name="bad_record">负面记录</string>
    <string name="last_mon_credit">上月信用变化</string>
    <string name="login_first">请先登录</string>
    <string name="sum_income">累计收益</string>
    <string name="mac">MAC地址：</string>
    <string name="location">所处位置：</string>
    <string name="sum_income_">累计收益：</string>
    <string name="use_count">使用人次：</string>
    <string name="cancel_share">取消分享</string>
    <string name="income">收益标准：</string>
    <string name="share">分享</string>
    <string name="msg_detail">消息详情</string>
    <string name="post_fail">上传失败</string>
    <string name="posting">上传中...</string>
    <string name="edit_nick">输入昵称</string>
    <string name="reset_nick">修改昵称</string>
    <string name="reset_succ">修改成功</string>
    <string name="reset_fail">修改失败</string>
    <string name="post_succ">上传成功</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="tel_can_not_reset">手机号暂不提供修改</string>
    <string name="current_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="reset_sex">设置性别</string>
    <string name="set_birthday">设置生日</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_slogan">让共享WiFi陪伴你身边</string>
    <string name="app_site">http://iwifi.zeblog.cn/</string>
    <string name="unpay">有未支付记录，需先进行支付才能继续连接共享WIFI？</string>
    <string name="hotspot_name_">热点名称：</string>
    <string name="traffic">使用量：</string>
    <string name="sure_quit">确认退出？</string>
    <string name="load_data">加载数据中...</string>
    <string name="traffic_">流量使用量</string>
    <string name="price_">资费标准</string>
    <string name="pay">支付金额</string>
    <string name="order_detail">订单详情</string>
    <string name="sure_pay">确认支付</string>
    <string name="pay_way">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="connect_succ">连接成功</string>
    <string name="testing">测试中...</string>
    <string name="download_speed">下载速度</string>
    <string name="upload_speed">上传速度</string>
    <string name="speed_test">网速测试</string>
    <string name="test_speed_finish">测速完成</string>
    <string name="locating">定位中，稍后重试</string>
    <string name="share_fail">分享失败</string>
    <string name="pay_succ">支付成功</string>
    <string name="paying">支付中...</string>
    <string name="pay_fail">支付失败</string>
    <string name="cost">支付费用</string>
    <string name="stop_use">停止使用</string>
</resources>
