<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lvqingyang.wifisharing.User.Setting.SettingActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:background="@color/accent_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <frame.view.SettingItem
                android:id="@+id/si_default_wifi_tool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:type="@string/normal"
                app:title="@string/default_wifi_tool"
                app:showSw="true"/>
            <frame.view.SettingItem
                android:id="@+id/si_notification_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/notification_bar_sw"
                app:info="@string/notification_bar_sw_info"
                app:showSw="true"/>
            <frame.view.SettingItem
                android:id="@+id/si_auto_turn_on_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/auto_turn_on_mobile"
                app:info="@string/auto_turn_on_mobile_info"
                app:showSw="true"/>
            <frame.view.SettingItem
                android:id="@+id/si_wifi_blacklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/wifi_blacklist"/>

            <frame.view.SettingItem
                android:id="@+id/si_update_remind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:type="@string/remind"
                app:title="@string/update_remind"
                app:showSw="true"/>
            <frame.view.SettingItem
                android:id="@+id/si_message_remind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/message_remind"
                app:info="@string/message_remind_info"
                app:showSw="true"/>
            <frame.view.SettingItem
                android:id="@+id/si_message_remind_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/message_remind_night"
                app:info="@string/message_remind_night_info"
                app:showSw="true"/>
            <frame.view.SettingItem
                android:id="@+id/si_message_remind_hotspot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/message_remind_hotspot"
                app:info="@string/message_remind_hotspot_info"
                app:showSw="true"/>

            <frame.view.SettingItem
                android:id="@+id/si_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:type="@string/about"
                app:title="@string/help"/>
            <frame.view.SettingItem
                android:id="@+id/si_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/about_us"/>
            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_spacing"
                android:textColor="@color/accent_red"
                android:textSize="@dimen/medium_text"
                android:background="@drawable/bg_item"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/logout"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/div"
                android:layout_marginStart="@dimen/setting_spacing"
                android:layout_marginEnd="@dimen/setting_spacing"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
