<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:gravity="end"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hotspot_name"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <Switch
                    android:id="@+id/sw_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/sub_medium_spacing"
                    android:text="@string/set_pwd"
                    android:textColor="@color/text_color"
                    android:switchPadding="@dimen/sub_small_spacing"/>
    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hotspot_pwd"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Switch
            android:id="@+id/sw_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/sub_medium_spacing"
            android:text="@string/post_hotspot"
            android:textColor="@color/text_color"
            android:switchPadding="@dimen/sub_small_spacing"/>
    </LinearLayout>


</LinearLayout>